--- a/notebook/data_preparation.ipynb
+++ b/notebook/data_preparation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -181,10 +181,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f96e2abd150>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fc40e53a750>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -206,13 +206,25 @@
        "BoundingBox(left=499000.1017706497, bottom=1408128.349303668, right=1513729.468076223, top=2612082.8797568628)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "gmap_5178.bounds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# write world file\n",
+    "with open(\"../data/processed/geology_map/reprojection.wld\", \"w\") as f:\n",
+    "    t = gmap_5178.profile['transform']\n",
+    "    f.write(f\"{t[0]}\\n{t[3]}\\n{t[1]}\\n{t[4]}\\n{t[2]}\\n{t[5]}\")"
    ]
   },
   {
